# Project-3-OOP

./: AddFunction.cpp  AddFunction.h  CMakeLists.txt  ConstantFunction.cpp  ConstantFunction.h  DivideFunction.cpp  DivideFunction.h  Function.h  MathematicalOperations.cpp  MathematicalOperations.h  MultiplyFunction.cpp  MultiplyFunction.h  README.md  SharedPtr.h  SubtractFunction.cpp  SubtractFunction.h  VariableFunction.cpp  VariableFunction.h  main.cpp
